# DRAGoM

./: README.md  install.sh  runDragom.py
lib/: samtools_ubuntu.gz.tar
src/: CMakeLists.txt  Makefile  SG.cpp  SG.h  env.config  extendAnchor.cpp  getSG.cpp  main.cpp  mergeSG.cpp  test.cpp
